--- a/ApiEasier.Frontend/src/app/data/pages/card-api-list/card-api-list.component.css
+++ b/ApiEasier.Frontend/src/app/data/pages/card-api-list/card-api-list.component.css
@@ -1,19 +1,60 @@
-
 .header-section {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; /* Три колонки: фильтр, пагинация, иконки */
+  grid-template-columns: 1fr 1fr 1fr; /* Three columns for larger screens */
   align-items: center;
-  gap: 10px; /* Отступы между элементами */
+  gap: 10px; /* Spacing between elements */
   padding: 0px;
 }
 
-.custom-pagination {
-  grid-column: 2; /* Пагинация в средней колонке */
-  justify-self: center; /* Выравнивание по центру */
+.filter-input {
+  grid-column: 1; /* Search input in the first column */
 }
 
-.header-section i {
-  grid-column: 3; /* Иконки в третьей колонке */
-  justify-self: end; /* Выравнивание по правому краю */
-  font-size: 27px !important;
+.pagination-sort-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  grid-column: 2 / span 2; /* Pagination and sort container spans the second and third columns */
+}
+
+.custom-pagination {
+  flex: 1; /* Pagination takes available space */
+  justify-self: center; /* Center alignment */
+}
+
+.icons-container {
+  flex: 1; /* Icons container takes available space */
+  display: flex;
+  justify-content: flex-end; /* Right alignment */
+}
+
+/* Adjust styles for mobile devices */
+@media (max-width: 600px) {
+  .header-section {
+    grid-template-columns: 1fr; /* Single column for mobile */
+    text-align: center; /* Center align text */
+  }
+
+  .filter-input {
+    grid-column: 1; /* Search input in the single column */
+    justify-self: center; /* Center alignment */
+    width: 100%; /* Full width */
+    max-width: 300px; /* Limit the maximum width */
+    margin-bottom: 10px; /* Spacing between elements */
+  }
+
+  .pagination-sort-container {
+    grid-column: 1; /* Pagination and sort container in the single column */
+    justify-content: center; /* Center alignment */
+    width: 100%; /* Full width */
+    margin-bottom: 10px; /* Spacing between elements */
+  }
+
+  .custom-pagination {
+    justify-self: center; /* Center alignment */
+  }
+
+  .icons-container {
+    justify-content: flex-end; /* Right alignment */
+  }
 }
