--- a/ApiEasier.Frontend/src/app/data/pages/card-api-list/card-api-list.component.css
+++ b/ApiEasier.Frontend/src/app/data/pages/card-api-list/card-api-list.component.css
@@ -58,3 +58,65 @@
     justify-content: flex-end; /* Right alignment */
   }
 }
+
+.checkbox-container input {
+  opacity: 0;
+  position: absolute;
+}
+
+.checkmark {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border: 2px solid #0056a6;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.checkbox-container input:checked ~ .checkmark {
+  background-color: #0056a6;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Добавим новые стили */
+.selection-controls {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-right: auto;
+}
+
+.checkbox-container {
+  display: none;
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  z-index: 1;
+}
+
+.selection-mode .checkbox-container {
+  display: block;
+}
+
+.primary-button{
+  margin: 0px;
+  margin-top: 1rem;
+}
